# Voice_To_Text.ai

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: ApiKeySettings.css  ApiKeySettings.tsx  ErrorMessage.css  ErrorMessage.tsx  RecordButton.css  RecordButton.tsx  StatusBar.css  StatusBar.tsx  TranscriptDisplay.css  TranscriptDisplay.tsx  index.ts
src/hooks/: useVoiceToText.ts
src/services/: audioCapture.ts  deepgramService.ts
src/types/: index.ts
