[package]
name = "voice-to-text"
version = "0.1.0"
description = "A Voice to Text Desktop App - Wispr Flow Clone"
authors = ["Manoj Kumawat"]
edition = "2021"

[lib]
name = "voice_to_text_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
